Quartz sync: Sep 9, 2024, 7:03 PM

--- a/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Линта Мур.md
+++ b/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Линта Мур.md
@@ -2,7 +2,7 @@
 aliases: 
 type: Персонаж
 location:
-  - "[[Нижний город|Нижний город]]"
+  - "[[Нижний город]]"
   - "[[Врата Бальдура]]"
 race:
   - Человек
@@ -28,6 +28,7 @@ dead: false
 > | Пол | Ж |
 > | Организация | [[Дозор]] |
 > | Статус | Жив(а) |
+
 Сержант [[Дозор|Дозора]] начиная с #1470х/1479ЛД.
 Мур командует отрядом из тридцати щитоносцев и трех сармаров. У нее репутация смертоносной фехтовальщицы, способной убить при исполнении служебного долга.
 
