--- a/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Эрл Наморран.md
+++ b/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Эрл Наморран.md
@@ -4,7 +4,7 @@ aliases:
 type: Персонаж
 location:
   - "[[Врата Бальдура]]"
-  - "[[Нижний город|Нижний город]]"
+  - "[[Нижний город]]"
 race:
   - Человек
 gender: М
@@ -25,11 +25,12 @@ dead: false
 > | Тип | Персонаж |
 > | --- | --- |
 > | Другие имена| Наморран |
-> | Местонахождение | [[Врата Бальдура]],[[Нижний город]] |
+> | Местонахождение | [[Врата Бальдура]],[[Нижний город\|Нижний город]] |
 > | Раса | Человек |
 > | Пол | М |
 > | Организация | [[Правительство Врат Бальдура]],[[Дозор\|Офицеры Врат Бальдура]] |
 > | Статус | Жив(а) |
+
 
 Управляющий Портом Врат Балдура на момент #1480х/1483ЛД 
 
