--- a/content/Действующие лица/Местоположение неизвестно/Акили Баст.md
+++ b/content/Действующие лица/Местоположение неизвестно/Акили Баст.md
@@ -10,7 +10,7 @@ location:
 race:
   - Табакси
 gender: Ж
-organisation:
+organisation: 
 dead: false
 ---
 
@@ -31,6 +31,6 @@ dead: false
 > | Организация | Нет данных |
 > | Статус | Жива  |
 
-Суетная заклинательница, у которой магия иногда вырывается из-под контроля. 
+Любознательная и непоседливая заклинательница, у которой магия иногда вырывается из-под контроля. В прошлом путешествовала с группой авантюристов - [[Опал]], Ниро и некие Лукас и Иона, которая неожиданно от неё скрылись. События в Невервинтере - благодаря которым началось это приключение были спровоцированы, в том числе, из-за её магии. Т.к. она ещё по сути ребёнок - часто не достаёт опыта в разных делах, из-за чего совершает местами странные поступки. Во время инцидента с деревней потеряла память, которая к ней частично возвращается. Встретила Опал, которая рассказала ей о том, что её бывшая группа за ней охотится. 
 
 Нынче работает на [[Опал]]. Не то чтобы ей это хотелось, однако приходится.
