--- a/content/Действующие лица/Местоположение неизвестно/Лилит.md
+++ b/content/Действующие лица/Местоположение неизвестно/Лилит.md
@@ -7,6 +7,26 @@ race:
  - Ифрит
 gender: Ж
 organisation:
-dead: 
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Лилит
+> 
+> ![[Лилит.png]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | Нет данных |
+> | Раса | Джин,Ифрит |
+> | Пол | Ж |
+> | Организация | Нет данных |
+> | Статус | Жив(а) |
+
+
+
 Покровительница [[Гайдо Алигьери]], 
