--- a/content/Действующие лица/Поместье Рейвентри/Крин Корвинар.md
+++ b/content/Действующие лица/Поместье Рейвентри/Крин Корвинар.md
@@ -1,11 +1,14 @@
 ---
 aliases: 
 type: Персонаж
-location: 
-race: 
-gender: МЖ
-organisation:
-dead: 
+location:
+  - "[[Поместье Рейвентри]]"
+  - План теней
+race:
+  - Человек
+gender: М
+organisation: 
+dead:
 ---
 
 > [!infobox]
@@ -17,10 +20,10 @@ dead:
 > | Тип | Персонаж |
 > | --- | --- |
 > | Другие имена| Нет данных |
-> | Местонахождение | Нет данных |
-> | Раса | Нет данных |
-> | Пол | МЖ |
+> | Местонахождение | [[Поместье Рейвентри]],План теней |
+> | Раса | Человек |
+> | Пол | М |
 > | Организация | Нет данных |
 > | Статус | Нет данных |
 
-Судя по [[Обуглянный клочок бумаги в камине|обуглянному клочку бумаги]], найденном в камине особняка на материальном плане, сын [[Дарриус Корвинар|Дарриуса]].
+Сын [[Дарриус Корвинар|Дарриуса]]. Муж [[Вивесна|Вивесны]].
