--- a/content/Игры/Врата Бальдура/Текста/Обуглянный клочок бумаги в камине.md
+++ b/content/Игры/Врата Бальдура/Текста/Обуглянный клочок бумаги в камине.md
@@ -14,8 +14,8 @@ fc-date:
 ---
 ![[Pasted image 20240730225748.png]]
 
-…сын, Крин Корвинар,                                                       ена 
-Вивесна,                   любой их потомок; *a*               О чем я 
+…сын, [[Крин Корвинар]],                                                    *ж*ена 
+[[Вивесна]],                   любой их потомок; *a*               О чем я 
 горячо молюсь, чтобы этого никогда не случилось. Им я 
 оставляю один медяк                                        ненасытная
 жадность                             бороться даже за эту скудную
