--- a/content/Игры/Врата Бальдура/Хроники/День 1. Возрождение.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 1. Возрождение.md
@@ -1,7 +1,7 @@
 ---
 type: Хроники
 compaign: Врата Бальдура
-date: 2023-03-23
+date: 30-03-2023
 sessionNum: 1
 fc_calendar: Календарь Хаптоса
 fc-category: Сессии
@@ -20,8 +20,6 @@ characters:
   - "[[Тори Кляйн]]"
   - "[[Джарлакс]]"
   - "[[Коран]]"
-cssclasses:
-  - dvl-c
 ---
 
 # Краткая сводка
@@ -30,7 +28,7 @@ cssclasses:
 
 Однако мы смогли вернуться к жизни благодаря Джарлаксу. Естественно, не за бесплатно. В обмен на наши жизни мы должны были избавить город от иллитидов, выполняя различные задания. Неизвестно, сколько их будет и их сложность, но выбора у нас не было. Кроме возраждения, [[Джарлакс]] раздал нам [[Арканы|метки]], что должны будут помочь в нашем путешествии. Так же на нас было наложено заклинание - ближайшие дни нас не будет никто помнить. 
 
-Вернул он нас во [[Внешний город ]], откуда мы должны были двигаться к нашему осведомителю в форме [[Коран|Корана]]. Все кроме Тори отправились по канализации, а мисс Кляйн надо было заскочить в пару мест в [[Нижний город |Нижнем городе]]. Когда же она решила встретиться с новыми "товарищами", по попытки пройти в [[Верхний город|Верхний город]] ей путь приградил [[Дозор]].
+Вернул он нас во [[Внешний город]], откуда мы должны были двигаться к нашему осведомителю в форме [[Коран|Корана]]. Все кроме Тори отправились по канализации, а мисс Кляйн надо было заскочить в пару мест в [[Нижний город|Нижнем городе]]. Когда же она решила встретиться с новыми "товарищами", по попытки пройти в [[Верхний город|Верхний город]] ей путь приградил [[Дозор]].
 
 Таким образом, когда вся команда собралась таки, Тори успела побывать под арестом, Руб и Гайдо вместе принять ванну и напиться,  [[Ксандр]] наесться до отвала, а Мирай привести себя в порядок после ползанья по канализации. 
 
@@ -38,5 +36,12 @@ cssclasses:
 
 Больше существо не вставало и все наконец разошлись по комнатам, правда не напрямую. Все девушки зашли к Корану чтобы узнать, что вообще за чертовщина происходит. Руб стоила по пути книжонку из его кабинета, а Коран тщательно писал обещанный Мирай доклад.
 
---- 
-> Следующая сессия: [[День 2. Путешествие по планам]]
+---
+<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+- > *Следующая сессия*: [[День 2. Путешествие по планам]]
+<!-- SerializedQuery END -->
+
+
+
+
