--- a/content/Игры/Врата Бальдура/Хроники/День 10.  Завершение миссий Сэдии.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 10.  Завершение миссий Сэдии.md
@@ -26,8 +26,11 @@ cssclasses:
   - dvl-c
 ---
 
-> Предыдущая сессия: [[День 10. Межпланарное зеркало]]
-
+<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+- > *Предыдущая сессия*: *[[content/Игры/Врата Бальдура/Хроники/День 10. Межпланарное зеркало.md|День 10. Межпланарное зеркало]]*
+<!-- SerializedQuery END -->
+---
 
 # Краткая сводка
 
@@ -91,4 +94,9 @@ cssclasses:
 ## Примечания
 Ксандр слишком много знает про особняк. Назвал Элсиет - сильварией, хотя раньше бы этого не понял и не вникал.
 
-> Следующая сессия: [[День 10. В ожидании аудиенции]]
+
+---
+<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+- > *Следующая сессия*: [[content/Игры/Врата Бальдура/Хроники/День 10. В ожидании аудиенции.md|День 10. В ожидании аудиенции]]
+<!-- SerializedQuery END -->
