--- a/content/Игры/Врата Бальдура/Хроники/День 10. В ожидании аудиенции.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 10. В ожидании аудиенции.md
@@ -1,7 +1,7 @@
 ---
 type: Хроники
 compaign: Врата Бальдура
-date: 2024-08-15
+date: 15-08-2024
 sessionNum: 29
 fc_calendar: Календарь Хаптоса
 fc-category: Сессии
@@ -11,7 +11,8 @@ fc-date:
   day: 10
 fc-display-name: В ожидании аудиенции
 location:
-  - "[[Врата Бальдура]]"
+  - "[[Поместье Рейвентри]]"
+  - План фей
 characters:
   - "[[Гайдо Алигьери]]"
   - "[[Ксандр]]"
@@ -24,7 +25,12 @@ characters:
 cssclasses:
   - dvl-c
 ---
-> Предыдущая сессия: [[День 10.  Завершение миссий Сэдии]]
+
+<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+- > *Предыдущая сессия*: *[[День 10.  Завершение миссий Сэдии]]*
+<!-- SerializedQuery END -->
+---
 
 # Краткая сводка
 Врата 15 08 24 Часть 1
@@ -202,12 +208,8 @@ cssclasses:
 • Они обсуждают, какие смены работы приоритетны для каждого из них.
 
 
-
-
-```dataview
-LIST without ID "Следующая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum > this.sessionNum
-SORT sessionNum asc
-Limit 1
-```
+---
+<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+- > *Следующая сессия*: [[День 10. Стрекозы, покер и Чемпион]]
+<!-- SerializedQuery END -->
