--- a/content/Игры/Врата Бальдура/Хроники/День 10. Межпланарное зеркало.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 10. Межпланарное зеркало.md
@@ -1,7 +1,7 @@
 ---
 type: Хроники
 compaign: Врата Бальдура
-date: 2024-07-30
+date: 30-07-2024
 sessionNum: 27
 fc_calendar: Календарь Хаптоса
 fc-category: Сессии
@@ -23,10 +23,14 @@ cssclasses:
   - dvl-c
 ---
 
-> Предыдущая сессия: [[День 9. Званный ужин у семьи Кляйн и снова в особняк]]
+<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+- > *Предыдущая сессия*: *[[content/Игры/Врата Бальдура/Хроники/День 9. Званный ужин у семьи Кляйн и снова в особняк.md|День 9. Званный ужин у семьи Кляйн и снова в особняк]]*
+<!-- SerializedQuery END -->
+---
 
 # Краткая сводка
-
+## Исследование зеркала
 #### 00:04 Поиск нежити
 
 • Герои обсуждают, как они могут определить, где находится нежить, и решают, что они могут использовать свое чутье для определения направления запаха.
@@ -193,4 +197,8 @@ cssclasses:
 • Они обсуждают, как им удалось выбраться и как это было интересно.
 
 
->Следующая сессия: [[День 10.  Завершение миссий Сэдии]]
+---
+<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+- > *Следующая сессия*: [[День 10.  Завершение миссий Сэдии]]
+<!-- SerializedQuery END -->
