--- a/content/Игры/Врата Бальдура/Хроники/День 3. Загадочная миска, Баал и суматоха.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 3. Загадочная миска, Баал и суматоха.md
@@ -1,7 +1,7 @@
 ---
 type: Хроники
 compaign: Врата Бальдура
-date: 2023-06-25
+date: 25-06-2023
 sessionNum: 6
 fc_calendar: Календарь Хаптоса
 fc-category: Сессии
@@ -13,7 +13,7 @@ fc-display-name: Загадочная миска, Баал и суматоха
 location:
   - "[[Врата Бальдура]]"
   - "[[Верхний город]]"
-  - "[[Внешний город |Внешний город]]"
+  - "[[Внешний город]]"
 characters:
   - "[[Гайдо Алигьери]]"
   - "[[Ксандр]]"
@@ -25,9 +25,20 @@ characters:
   - "[[Коран]]"
 cssclasses: dvl-c
 ---
->Предыдущая сессия: [[День 2. Путешествие по планам]] 
+
+<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+- > *Предыдущая сессия*: *[[День 2. Путешествие по планам]]*
+<!-- SerializedQuery END -->
+---
 
 
 # Краткая сводка
+
+
 ---
-> Следующая сессия: [[День 4. Встреча с мистером Печенькой]] 
+<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+- > *Следующая сессия*: [[День 4. Встреча с мистером Печенькой]]
+<!-- SerializedQuery END -->
+
