--- a/content/Игры/Врата Бальдура/Хроники/День 4. Падение псевдо-капитана.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 4. Падение псевдо-капитана.md
@@ -23,7 +23,11 @@ characters:
 cssclasses: dvl-c
 ---
 
-> Предыдущая сессия: [[День 4. Встреча с мистером Печенькой]] 
+<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+- > *Предыдущая сессия*: *[[День 4. Встреча с мистером Печенькой]]*
+<!-- SerializedQuery END -->
+---
 
 
 # Краткая сводка
@@ -56,4 +60,7 @@ cssclasses: dvl-c
 
 
 ---
-> Следующая сессия: [[День 4. Убийство дворфийки и уборщика]] 
+<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+- > *Следующая сессия*: [[День 4. Убийство дворфийки и уборщика]]
+<!-- SerializedQuery END -->
