--- a/content/Игры/Врата Бальдура/Хроники/День 6. Банкетный зал и мозги.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 6. Банкетный зал и мозги.md
@@ -24,7 +24,11 @@ cssclasses:
   - dvl-c
 ---
 
-> Предыдущая сессия: [[День 5. Погоня и пустынный остров]] 
+<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+- > *Предыдущая сессия*: *[[День 5. Погоня и пустынный остров]]*
+<!-- SerializedQuery END -->
+---
 
 
 # Краткая сводка
@@ -46,4 +50,9 @@ cssclasses:
 
 
 ---
->Следующая сессия: [[День 6. Материальный план и желания]] 
+<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+- > *Следующая сессия*: [[День 6. Материальный план и желания]]
+<!-- SerializedQuery END -->
+
+
