--- a/content/Игры/Врата Бальдура/Хроники/День 6. Материальный план и желания.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 6. Материальный план и желания.md
@@ -23,7 +23,12 @@ characters:
 cssclasses: dvl-c
 ---
 
-> Предыдущая сессия: [[День 6. Банкетный зал и мозги]] 
+<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+- > *Предыдущая сессия*: *[[День 6. Банкетный зал и мозги]]*
+<!-- SerializedQuery END -->
+
+---
 
 
 # Краткая сводка
@@ -42,5 +47,9 @@ cssclasses: dvl-c
 
 После все, кроме Мирай, разошлись.
 
+
 ---
->Следующая сессия: [[День 7. Корабль и возвращение к началу]] 
+<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+- > *Следующая сессия*: [[content/Игры/Врата Бальдура/Хроники/День 7. Корабль и возвращение к началу.md|День 7. Корабль и возвращение к началу]]
+<!-- SerializedQuery END -->
