--- a/content/Игры/Врата Бальдура/Хроники/День 9. Званный ужин у семьи Кляйн и снова в особняк.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 9. Званный ужин у семьи Кляйн и снова в особняк.md
@@ -1,7 +1,7 @@
 ---
 type: Хроники
 compaign: Врата Бальдура
-date: 2024-07-27
+date: 27-07-2024
 sessionNum: 26
 fc_calendar: Календарь Хаптоса
 fc-category: Сессии
@@ -26,26 +26,17 @@ cssclasses:
   - dvl-c
 ---
 
-> Предыдущая сессия: [[День 8. 50 лет спустя]] 
-
+<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+- > *Предыдущая сессия*: *[[content/Игры/Врата Бальдура/Хроники/День 8. 50 лет спустя.md|День 8. 50 лет спустя]]*
+<!-- SerializedQuery END -->
+---
 
 # Краткая сводка
 
-Шторм 27.07.24 Часть 1
+## У Корана
 
-00:00 Возвращение в особняк
-
-• Герои перемещаются в разрушенную версию особняка, где их встречает Гайда.
-• Они обсуждают, как вернуться в свой мир, и решают попробовать нарисовать круг.
-
-10:09 Ритуал перемещения
-
-• Герои проводят ритуал перемещения, используя камни, которые остались после предыдущего ритуала.
-• Они перемещаются в порт, где Гайда не чувствует ничего необычного.
-
-18:20 Встреча с Кораном
-
-• Герои решают пойти к Корану, чтобы узнать, сколько времени прошло и получить информацию о парадоксах времени.
+Проведя ритуал перемещения, они перемещаются в порт. Герои решают пойти к Корану, чтобы узнать, сколько времени прошло и получить информацию о парадоксах времени.
 
 19:47 Разговор о будущем
 
@@ -92,10 +83,7 @@ cssclasses:
 • Герои возвращаются к Корану, который отправляет их домой и просит привести себя в порядок.
 • Герои обсуждают время и решают отдохнуть перед званым ужином.
 
-01:16:19 Поиск карты
-
-• Герой ищет карту и находит ее.
-• Герой решает не выводить карту на экран.
+#### Похождения Руб
 
 01:18:25 Руб и ее путь
 
@@ -119,6 +107,8 @@ cssclasses:
 
 • Голубь врезается в Ру, и она получает письмо от Корана.
 • Ру читает письмо, в котором Коран просит ее срочно прийти в таверну "Потрошитель".
+
+#### Все вместе
 
 17:25 Гайда и Руб
 
@@ -188,8 +178,6 @@ cssclasses:
 • Гайда и его команда обсуждают, как добавить парадную одежду в инвентарь.
 • Гайда добавляет парадную одежду в инвентарь и готовится к приему.
 
-Врата 27.07.24 Часть 3
-
 00:22 Разговор о долгах и деньгах
 
 • Руб и Гайда обсуждают долги и деньги, Руб дает Корану кошелек с 90 платины.
@@ -210,6 +198,7 @@ cssclasses:
 • Обсуждается возможность использования проклятий и ядов для отравления противника.
 • Рассматривается возможность использования алхимии для создания ядов.
 
+## Званный ужин
 26:03 Встреча с гостями
 
 • Героиня и ее отец встречают гостей, включая посла и его телохранителя.
@@ -286,6 +275,7 @@ cssclasses:
 • Герои отправляются в путешествие, где им предстоит найти особняк и вернуться обратно.
 • Они обсуждают, что им нужно сделать, чтобы выполнить свою миссию.
 
+## Снова в особняке
 31:35 Возвращение в особняк
 
 • Герои возвращаются в особняк, где они находят Перриуса, который их узнает.
@@ -322,6 +312,8 @@ cssclasses:
 • Остальные участники решают, кто где будет спать, основываясь на том, кто первым зашел в комнату.
 
 
-
 ---
->Следующая сессия: [[День 10. Межпланарное зеркало]] 
+<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+- > *Следующая сессия*: [[content/Игры/Врата Бальдура/Хроники/День 10. Межпланарное зеркало.md|День 10. Межпланарное зеркало]]
+<!-- SerializedQuery END -->
