--- a/content/Игры/Шторм Короля Бурь/Хроники/Камни, охота и передача глаза.md
+++ b/content/Игры/Шторм Короля Бурь/Хроники/Камни, охота и передача глаза.md
@@ -2,7 +2,7 @@
 type: Хроники
 compaign: Врата Бальдура
 date: 11-07-2024
-sessionNum: 
+sessionNumS: 
 fc_calendar: Календарь Хаптоса
 fc-category: Сессии Шторм
 fc-date:  
@@ -25,6 +25,7 @@ characters:
   - "[[Сол]]"
 cssclasses: dvl-c
 ---
+
 # Краткая сводка
 ### Шторм 11.07.24 Часть 1
 
@@ -90,6 +91,7 @@ cssclasses: dvl-c
 
 • Вик изучает книгу, а Магнус обсуждает с ней, что они будут изучать в первую очередь.
 
+
 ### Шторм 11.07.24 Часть 2
 
 00:02 Обсуждение фамильяров и их способностей
@@ -151,7 +153,4 @@ cssclasses: dvl-c
 
 • Азара записывает выживание на разделку зайцев.
 • Вика начинает мариновать зайцев в специях и разделывать кости.
-
-
-
 
