--- a/content/Лор/Организации/Врата Бальдура/Гильдия.md
+++ b/content/Лор/Организации/Врата Бальдура/Гильдия.md
@@ -6,7 +6,7 @@ aliases:
 type: Организация
 location:
   - "[[Врата Бальдура]]"
-  - "[[Внешний город|Внешний город]]"
+  - "[[Внешний город]]"
 ---
 
 # Гильдия Врат Балдура
