--- a/content/Игры/Врата Бальдура/Текста/О создании арканной  связи.md
+++ b/content/Игры/Врата Бальдура/Текста/О создании арканной  связи.md
@@ -16,9 +16,8 @@ fc-date:
 
 *Почти рифмованную педантичность [[Олфорт|Олфорта]] трудно расшифровать, но в ней есть кусочки бесценной информации. К сожалению, [[Олфорт]] сошел с ума во время написания Планарных привязок, оставив тех из нас, кто еще полностью владеет своими способностями, пытаться отделить безумие от реальности. Его записи для составления ритуальных кругов - абсолютная чушь, настолько, что я вынужден задаться вопросом, не вводил ли он учеников в заблуждение намеренно.*
 
-![[Pasted image 20240808214612.png|500]]
-> 
-> *Для функционирования всех планарных путешествий достаточно двух вещей. Первая - активная, вторая - пассивная.*
+![[Pasted image 20240808214612.png|300]] 
+ *Для функционирования всех планарных путешествий достаточно двух вещей. Первая - активная, вторая - пассивная.*
 > 
 > *Прежде всего, сущность, которая протекает во всех вещах и через все вещи, приходит и уходит яркой, она во всех вещах яркая, и в то же время теневая и неизвестная. Эти фрагменты того, что делает нас целым, собраны из частей более великой сущности, просвечивающей через линзу в наш мир, которая, сгущаясь, составляет то, что является тем, что составляет нас. Эта необходимая энергия, когда она сама по себе (к ней не примыкает никакая другая материя, в которой она должна проявить свое надлежащее действие), безгранична и невидима, сама по себе достаточна для любого действия, которое ей присуще, подвижна и поддается всем вещам, которые находятся рядом с ней.*
 > 
