--- a/content/Игры/Врата Бальдура/Хроники/День 2. Путешествие по планам.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 2. Путешествие по планам.md
@@ -27,9 +27,11 @@ characters:
 cssclasses:
   - dvl-c
 ---
-
-> Предыдущая сессия: [[День 1. Возрождение]]
-
+<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+- > *Предыдущая сессия*: *[[content/Игры/Врата Бальдура/Хроники/День 1. Возрождение.md|День 1. Возрождение]]*
+<!-- SerializedQuery END -->
+---
 
 # Краткая сводка
 *Ночью, когда все остальные уже легли, Руб прочитала книгу, похищенную у Корана. Ну, а потом спать легла и забыла.*
@@ -45,4 +47,8 @@ cssclasses:
 
 
 ---
-> Следующая сессия: [[День 3. Загадочная миска, Баал и суматоха]] 
+<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+- > *Следующая сессия*: [[content/Игры/Врата Бальдура/Хроники/День 3. Загадочная миска, Баал и суматоха.md|День 3. Загадочная миска, Баал и суматоха]]
+<!-- SerializedQuery END -->
+
