--- a/content/Игры/Врата Бальдура/Хроники/День 5. Освобождение из камня.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 5. Освобождение из камня.md
@@ -25,7 +25,11 @@ cssclasses:
   - dvl-c
 ---
 
-> Предыдущая сессия: [[День 5. Пиратская засада]] 
+<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+- > *Предыдущая сессия*: *[[День 5. Пиратская засада]]*
+<!-- SerializedQuery END -->
+---
 
 
 # Краткая сводка
@@ -53,4 +57,7 @@ cssclasses:
 
 
 ---
->Следующая сессия: [[День 5. Заражение и новый дом]] 
+<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 --><!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+- > *Следующая сессия*: [[День 5. Заражение и новый дом]]
+<!-- SerializedQuery END -->
+
