--- a/content/Игры/Врата Бальдура/Хроники/День 7. Привычная обстановка.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 7. Привычная обстановка.md
@@ -1,7 +1,7 @@
 ---
 type: Хроники
 compaign: Врата Бальдура
-date: 2023-02-12
+date: 12-02-2023
 sessionNum: 18
 fc_calendar: Календарь Хаптоса
 fc-category: Сессии
@@ -13,8 +13,8 @@ fc-display-name: Привычная обстановка
 location:
   - "[[Врата Бальдура]]"
   - "[[Верхний город]]"
-  - "[[Нижний город |Нижний город]]"
-  - "[[Внешний город |Внешний город]]"
+  - "[[Нижний город]]"
+  - "[[Внешний город]]"
   - Таверна "Потрошитель"
   - Таверна "В слюни и сопли"
   - Дом Дамара и Руб
@@ -37,8 +37,11 @@ characters:
   - "[[Коран]]"
 cssclasses: dvl-c
 ---
-
-> Предыдущая сессия: [[День 7. Корабль и возвращение к началу]] 
+<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+- > *Предыдущая сессия*: *[[content/Игры/Врата Бальдура/Хроники/День 7. Корабль и возвращение к началу.md|День 7. Корабль и возвращение к началу]]*
+<!-- SerializedQuery END -->
+---
 
 
 # Краткая сводка
@@ -48,7 +51,7 @@ cssclasses: dvl-c
 По возвращении Тори сразу окружили служанки, суетясь и воркуя над ней. Не сильно заостряя на них внимание, она сразу пошла к [[Фауст Кляйн|папиньке]] и договорилась на парочку покупок в ближайших магазинах. Про путешествие своё не рассказывала, чисто парой слов упомянула с кем важным дни провела. Ну а дальше, слегка поизучав, что ей надо, пошла искать нужные ей ингредиенты. Заодно забежала в одну из своих мастерских, сделав заказ на новую одёжку. 
 
 ##### Мирай
-Как и всегда, поместье было тихим. В округе патрулировали несколько стражников, но они старались играть часть массовки. Внутри поместя так же царила тяжёлая атмосфера. Там находилось лишь двое. Первым делом она пошла узнать у дворецкого ситуацию. Оллин, сначала послушав, что скажет она о последней декаде. К счастью, в дом была донесена информация, что она сейчас была занята по заданию от 4 герцогов. Детали не уточнялись. Обещав позже Оллину дать два отчёта  она отправилась в к матери. Мать тоже не сказала детали. Мирай объяснив, что ситуация с [[Пылающий Кулак|Пылающим Кулаком]] в Амне и на островах, связанна, смогла получить обещание связаться с [[Ульдер Рейвенгард|Ульдером Рейвенгардом]] в ближайшее время. Ну и сказала, что ей всё же придётся самой уплыть, даже не смотря на риски. Позже, она вернулась заниматься бюрократией и дальше, лишь ненадолго ещё выйдя [[Диалог  с Оллином 07.01.1483|пообщаться с дворецким]] перед сном.
+Как и всегда, поместье было тихим. В округе патрулировали несколько стражников, но они старались играть часть массовки. Внутри поместя так же царила тяжёлая атмосфера. Там находилось лишь двое. Первым делом она пошла узнать у дворецкого ситуацию. Оллин, сначала послушав, что скажет она о последней декаде. К счастью, в дом была донесена информация, что она сейчас была занята по заданию от 4 герцогов. Детали не уточнялись. Обещав позже Оллину дать два отчёта (один истинный и второй официальный) она отправилась в к матери. Мать тоже не сказала детали. Мирай объяснив, что ситуация с [[Пылающий Кулак|Пылающим Кулаком]] в Амне и на островах, связанна, смогла получить обещание связаться с [[Ульдер Рейвенгард|Ульдером Рейвенгардом]] в ближайшее время. Ну и сказала, что ей всё же придётся самой уплыть, даже не смотря на риски. Позже, она вернулась заниматься бюрократией и дальше, лишь ненадолго ещё выйдя [[Диалог  с Оллином 07.01.1483|пообщаться с дворецким]] перед сном.
 
 ##### Гайдо
 Немного выпендрившись у юань-ти и уйдя на удивление целым, он пошёл уже было к Корану, но словил хвост. К счастью, "хвостик" просто должен был передать информацию, где ожидается встреча. В Таверне его встретила знакомая ему хитрая морда, в уже попивающая потихоньку, [[Меллоу Квин]]. Обменявшись приветствиями, он перешёл к делу. Коротко: табакси помогает с капитанством и командой для корабля, а ей корабль и заодно и сокровища в придачу на островах. Гайдо же теперь принц ещё и на бумаге. Подвох конечно в ситуации на островах, но пиратку ситуация устроила. Получив обещание от Гайдо о ещё одной встрече чуть позже, но уже на "личные темы". Главное, ей теперь нельзя было дебоширит в Нижнем городе, вот и пошла она во Внешний шуметь.
@@ -67,4 +70,10 @@ cssclasses: dvl-c
 
 
 ---
->Следующая сессия: [[День 8. Сбор у Корана]] 
+<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+- > *Следующая сессия*: [[content/Игры/Врата Бальдура/Хроники/День 8. Сбор у Корана.md|День 8. Сбор у Корана]]
+<!-- SerializedQuery END -->
+
+
+
