--- a/content/Игры/Врата Бальдура/Хроники/День 8. Дом с призраками.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 8. Дом с призраками.md
@@ -23,7 +23,12 @@ cssclasses:
   - dvl-c
 ---
 
-> Предыдущая сессия: [[День 8. Сбор у Корана]] 
+<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+- > *Предыдущая сессия*: *[[content/Игры/Врата Бальдура/Хроники/День 8. Сбор у Корана.md|День 8. Сбор у Корана]]*
+<!-- SerializedQuery END -->
+
+---
 
 
 # Краткая сводка
@@ -76,11 +81,9 @@ cssclasses:
 
 Справа от входа в особняк мох
 
-Знает Тори: 
-> На картине, что осмотрела Тори: "Сердце Рейвентри" Таиды Редстоун
-> 
-> Таида Редстоун - художница, нарисовавшая большую часть картин в поместье
-> Дариус Корвинар 38 лет. Картина в в комнате справа от входа. Изначально в пару никто не верил, но оказались крепкой парой с Иланой. Прожили друг с другом 18 лет. 
+<details> <summary><i>!Знает только Тори!</i></summary> <p>  <font color="#7f7f7f"> Картина, что осмотрела Тори: <i> "Сердце Рейвентри" </i> Таиды Редстоун <br><br>
+Таида Редстоун - художница, нарисовавшая большую часть картин в поместье<br><br>
+Дариус Корвинар 38 лет. Картина в в комнате справа от входа. Изначально в пару никто не верил, но оказались крепкой парой с Иланой. Прожили друг с другом 18 лет. "</font></p> </details>
 
 Тори пытается выяснить имя ворона, но безуспешно. На тему знает ли ворон Дариуса, ворон ответил неуверенным нет. Перриуса тоже не знает. 
 
@@ -99,4 +102,7 @@ cssclasses:
 
 
 ---
->Следующая сессия: [[День 8. Особняк на плане фей]] 
+<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+- > *Следующая сессия*: [[content/Игры/Врата Бальдура/Хроники/День 8. Особняк на плане фей.md|День 8. Особняк на плане фей]]
+<!-- SerializedQuery END -->
