--- a/content/Игры/Врата Бальдура/Хроники/День 8. Новая фея и злость Поварихи.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 8. Новая фея и злость Поварихи.md
@@ -1,7 +1,7 @@
 ---
 type: Хроники
 compaign: Врата Бальдура
-date: 2024-06-15
+date: 15-06-2024
 sessionNum: 24
 fc_calendar: Календарь Хаптоса
 fc-category: Сессии
@@ -27,13 +27,14 @@ characters:
 cssclasses:
   - dvl-c
 ---
- 
-> Предыдущая сессия: [[День 8. Ссора карги и русалки]] 
+
+<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+- > *Предыдущая сессия*: *[[День 8. Ссора карги и русалки]]*
+<!-- SerializedQuery END -->
 
 
 # Краткая сводка
-
-# Полная сводка
 ### Вечеринка у сатиров
 Руб и Гайдо как только залетели в зал к сатирам, им сразу налили. Ток сделав глоток они уже почувствовали себя сатирами и взялись за музыкальные инструменты. Ксандр выпивает бочку целебного зелья, и ему становится физически чуть получше, однако он всё ещё выпил целую бочку непонятной бодяги от сатиров. Гайдо отметил, что не хватает представительниц "прекрасного пола", и тут же появились сатиры ... более женственные. 
 
@@ -74,25 +75,13 @@ cssclasses:
 ### Повариха 
  Возвращаясь обратно в гостевую комнату, все видят, что Тори уже успела вернуться. Она передаёт Гайдо корзинку с фруктами, наносит на него противоядие и объясняет что надо делать. Остальные просто отдыхают в этот момент, ибо сильно вымотаны.
 
-Достаточно подготовленный, Гайдо идёт к Поварихе. Она встречает его довольно радостно - вроде парень смелый, смышлёный. 
+Достаточно подготовленный, Гайдо идёт к [[Красная повариха|Поварихе]]. Она встречает его довольно радостно - вроде парень смелый, смышлёный. Она объясняет Гайдо план по отравлению спрайтов и передаёт "руку", отравляющая только фей. Когда [[Красная повариха|Повариха]] уходит, Гайдо незаметно добавляет яд в мясо и прячет пробирку в рукаве. После - относит отравленную еду в банкетный стол.
 
----
-## Подлежит редактуре
+Когда Гайдо вышел, прибежала разъярённая Повариха,
 
-Подготовка к отравлению
-Гайда готовит отравленное мясо, используя яд из пробирки.
-Он незаметно добавляет яд в мясо и прячет пробирку в рукаве.
+Мирай, слыша шум, открывает дверь магической рукой и закидывает "бомбочку" к сатирам.
 
-Отравление и последствия
-Гайда приносит отравленное мясо на банкетный стол.
-Повариха дает ему кисть, которая является ядовитой.
-Гайда использует кисть для отравления спрайтов в теплице.
-
-Подготовка к взрыву
-Гайда просит у тори бомбочку и использует ее для взрыва на втором этаже.
-Гайда открывает дверь магической рукой и закидывает бомбочку внутрь.
-
-##### тут боевика, вероятно надо много убрать
+##### Боёвка
 Нейросеть YandexGPT сделала краткий пересказ видео
 Сессия 15.06.24 Часть 6
 Обсуждение способностей и действий
@@ -171,17 +160,16 @@ cssclasses:
 Завершение боя и обсуждение медицины
 В конце боя, обсуждается использование медицины для стабилизации и лечения персонажей.
 Упоминается черта "двойная медицина", которая позволяет использовать компоненты целителя для лечения.
-Обсуждается, что компоненты целителя стоят дороже, но могут быть использованы для улучшения состояния персонажей.
-
+Обсуждается, что компоненты целителя стоят дороже, но могут быть использованы для улучшения состояния персонажей
 
 Нейросеть YandexGPT сделала краткий пересказ видео
 Сессия 15.06.24 Часть 10
 Обсуждение способностей и заклинаний
 Обсуждение магического вдохновения, которое позволяет использовать кость бардовского вдохновения для нанесения дополнительного урона или восстановления здоровья.
 Гайда и Мира обсуждают, как использовать эту способность в бою.
+##### Конец боёвки
 
-Сжигание руки и баррикады
-Гайда сжигает руку мертвой твари, которая пыталась отравить спрайтов.
+Гайдо предлагает руку, полученную от Поварихи, Гайдо сжигает руку мертвой твари, которая пыталась отравить спрайтов.
 Руб и Гайда помогают Мирай подняться и уходят из комнаты.
 Руб замечает, что гоблин, который боялся Гайды, баррикадирует дверь.
 
@@ -190,5 +178,9 @@ cssclasses:
 Обсуждается возможность продолжить игру или закончить сцену.
 В итоге, решают продолжить игру, но если все будут согласны.
 
+
 ---
->Следующая сессия: [[День 8. 50 лет спустя]] 
+<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+- > *Следующая сессия*: [[content/Игры/Врата Бальдура/Хроники/День 8. 50 лет спустя.md|День 8. 50 лет спустя]]
+<!-- SerializedQuery END -->
