--- a/content/Игры/Врата Бальдура/Хроники/День 8. Ссора карги и русалки.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 8. Ссора карги и русалки.md
@@ -26,8 +26,11 @@ characters:
 cssclasses: dvl-c
 ---
 
-> Предыдущая сессия: [[День 8. Сатиры, Повариха и Библиотека]] 
-
+<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
+- > *Предыдущая сессия*: *[[content/Игры/Врата Бальдура/Хроники/День 8. Сатиры, Повариха и Библиотека.md|День 8. Сатиры, Повариха и Библиотека]]*
+<!-- SerializedQuery END -->
+---
 
 # Краткая сводка
 #### Разговор с Сэдией
@@ -88,4 +91,7 @@ cssclasses: dvl-c
 
 
 ---
->Следующая сессия: [[День 8. Новая фея и злость Поварихи]] 
+<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+- > *Следующая сессия*: [[content/Игры/Врата Бальдура/Хроники/День 8. Новая фея и злость Поварихи.md|День 8. Новая фея и злость Поварихи]]
+<!-- SerializedQuery END -->
