--- a/content/Материалы/Таблицы/Последние 3 записи хроники.md
+++ b/content/Материалы/Таблицы/Последние 3 записи хроники.md
@@ -1,5 +1,5 @@
-| File                                                                                                    | Дата игры  | Дата в игре                                                                        |
-| ------------------------------------------------------------------------------------------------------- | ---------- | ---------------------------------------------------------------------------------- |
-| [[Игры/Врата Бальдура/Хроники/День 10. В ожидании аудиенции.md\|День 10. В ожидании аудиенции]]         | 15-08-2024 | <ul><li><b>year</b>: 1483</li><li><b>month</b>: 0</li><li><b>day</b>: 10</li></ul> |
-| [[Игры/Врата Бальдура/Хроники/День 10.  Завершение миссий Сэдии.md\|День 10.  Завершение миссий Сэдии]] | 08-08-2024 | <ul><li><b>year</b>: 1483</li><li><b>month</b>: 0</li><li><b>day</b>: 10</li></ul> |
-| [[Игры/Врата Бальдура/Хроники/День 10. Межпланарное зеркало.md\|День 10. Межпланарное зеркало]]         | 30-07-2024 | <ul><li><b>year</b>: 1483</li><li><b>month</b>: 0</li><li><b>day</b>: 10</li></ul> |
+| File                                                                                                      | Дата игры  | Дата в игре                                                                        |
+| --------------------------------------------------------------------------------------------------------- | ---------- | ---------------------------------------------------------------------------------- |
+| [[Игры/Врата Бальдура/Хроники/День 10. Стрекозы, покер и Чемпион.md\|День 10. Стрекозы, покер и Чемпион]] | 24-08-2024 | <ul><li><b>year</b>: 1483</li><li><b>month</b>: 0</li><li><b>day</b>: 10</li></ul> |
+| [[Игры/Врата Бальдура/Хроники/День 10. В ожидании аудиенции.md\|День 10. В ожидании аудиенции]]           | 15-08-2024 | <ul><li><b>year</b>: 1483</li><li><b>month</b>: 0</li><li><b>day</b>: 10</li></ul> |
+| [[Игры/Врата Бальдура/Хроники/День 10.  Завершение миссий Сэдии.md\|День 10.  Завершение миссий Сэдии]]   | 08-08-2024 | <ul><li><b>year</b>: 1483</li><li><b>month</b>: 0</li><li><b>day</b>: 10</li></ul> |
