Quartz sync: Sep 9, 2024, 7:14 PM

--- a/content/Игры/Врата Бальдура/Хроники/День 5. Заражение и новый дом.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 5. Заражение и новый дом.md
@@ -45,6 +45,4 @@ cssclasses:
 
 
 ---
-<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 --><!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-- > *Следующая сессия*: [[День 5. Погоня и пустынный остров]]
-<!-- SerializedQuery END -->
+<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
