--- a/content/Игры/Врата Бальдура/Хроники/День 5. Пиратская засада.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 5. Пиратская засада.md
@@ -42,6 +42,4 @@ cssclasses: dvl-c
 
 
 ---
-<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 --><!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-- > *Следующая сессия*: [[День 5. Освобождение из камня]]
-<!-- SerializedQuery END -->
+<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
