Quartz sync: Sep 9, 2024, 7:16 PM

--- a/content/Игры/Врата Бальдура/Хроники/День 8. 50 лет спустя.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 8. 50 лет спустя.md
@@ -1,7 +1,7 @@
 ---
 type: Хроники
 compaign: Врата Бальдура
-date: 23-06-2024
+date: 2024-06-23
 sessionNum: 25
 fc_calendar: Календарь Хаптоса
 fc-category: Сессии
@@ -30,7 +30,7 @@ cssclasses:
 
 <!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
 <!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-- > *Предыдущая сессия*: *[[content/Игры/Врата Бальдура/Хроники/День 8. Новая фея и злость Поварихи.md|День 8. Новая фея и злость Поварихи]]*
+- > *Предыдущая сессия*: *[[День 8. Новая фея и злость Поварихи]]*
 <!-- SerializedQuery END -->
 
 ---
@@ -173,5 +173,5 @@ cssclasses:
 ---
 <!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
 <!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-- > *Следующая сессия*: [[content/Игры/Врата Бальдура/Хроники/День 9. Званный ужин у семьи Кляйн и снова в особняк.md|День 9. Званный ужин у семьи Кляйн и снова в особняк]]
+- > *Следующая сессия*: [[День 9. Званный ужин у семьи Кляйн и снова в особняк]]
 <!-- SerializedQuery END -->
